--- a/machine_learning_notebook.ipynb
+++ b/machine_learning_notebook.ipynb
@@ -1292,6 +1292,324 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9fdcf99b",
+   "metadata": {},
+   "source": [
+    "Note: Ok so remember that first graph I shown, that shows that the dataset was pretty imbalanced. So I actually tried and explored ways to fix it, one of which was to use iblr, a imbalance linear regression library on github I found to try rectify it. So what happened is that the model i trained WILL NOT WORK in this notebook currently because it doesnt have the pip installed. Instead I have trained it seperately and evaluated the same way on plots graphs. Only the trained model code is different, the parmams are still the same. I will show You below.\n",
+    "\n",
+    "## 🧪 Did Oversampling Actually Help With Rare Events? — In-Depth Analysis\n",
+    "\n",
+    "### **Background & Motivation**\n",
+    "\n",
+    "In most real-world earthquake datasets, the vast majority of events are of *low or moderate magnitude*, while truly large, destructive quakes are **rare**. This means that standard machine learning models, which minimize average error, will often *ignore* or badly predict these rare but crucial events. \n",
+    "\n",
+    "My goal wasn’t just to get a lower RMSE overall, but to ensure the model could **reliably predict high-magnitude earthquakes** — even if they’re rare in the data.\n",
+    "\n",
+    "**To address this, I tested:**\n",
+    "1. **Stratified Train-Test Splitting**: I made sure that both my train and test sets contained proportional numbers of rare (high-magnitude) cases, using `stratify=df_feat['target_bin']` in `train_test_split`. This prevents all rare cases from accidentally ending up in just the train or test split.\n",
+    "2. **ImbalancedLearningRegression (IBLR) Oversampling**: I used Gaussian Noise (GN) synthetic oversampling from the `IBLR` package *only* on the training set. The idea is to artificially “boost” the number of rare, high-magnitude examples by creating plausible synthetic versions, so the model “pays attention” to those regions.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **How I Evaluated If It Worked**\n",
+    "\n",
+    "1. **Visualizing the Distribution**:\n",
+    "   - Before and after oversampling, I checked the count of rare bins in my training set to verify that IBLR had really increased their representation.\n",
+    "   - I then checked the *test* set to make sure I still had real, not synthetic, rare cases for unbiased evaluation.\n",
+    "\n",
+    "2. **Per-Bin Error Analysis**:\n",
+    "   - Instead of just reporting global RMSE, I **segmented the test set by magnitude bin** (e.g., 5.4–5.6, 5.2–5.4, etc.).\n",
+    "   - For each bin, especially the rarest/highest, I computed test RMSE and MAE to see if the model performed better on these after oversampling.\n",
+    "   - This is crucial because a model could have good overall performance but still be *terrible* on rare events.\n",
+    "\n",
+    "3. **Residuals & Bias Inspection**:\n",
+    "   - I plotted *residuals vs. predicted magnitude* and *predicted vs. actual* for the test set, focusing on the tails (rare, large-magnitude events).\n",
+    "   - The goal: look for systematic under- or over-estimation on high-magnitude cases, and see if the oversampled model was less biased there.\n",
+    "\n",
+    "4. **Calibration Plots**:\n",
+    "   - I binned the test set by actual magnitude, plotted the average predicted value per bin, and checked for deviations from the ideal “y=x” line, especially at the extremes.\n",
+    "   - This reveals if the model systematically “shrinks” extreme predictions (regression to the mean).\n",
+    "\n",
+    "5. **Learning Curves & Overfitting**:\n",
+    "   - I checked learning curves (train vs. validation error vs. training size) to see if the oversampling was actually helping the model generalize, or just causing overfitting to noisy synthetic points.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Findings**\n",
+    "1. My Current Model Results\n",
+    "![My Current Model Results](1st_andcurrentModel(No_iblr).png)\n",
+    "\n",
+    "2.My iblr model results\n",
+    "![My iblr model results](2nd_trained_model(iblr_coded).png)\n",
+    "\n",
+    "#### 1. **Oversampling Did Increase Representation of Rare Events (in Training)**\n",
+    "- After applying IBLR’s Gaussian Noise oversampling, the number of rare (high-magnitude) samples in the training set increased significantly (see target bin counts).\n",
+    "- However, *test set distribution remained unchanged* (which is good, because we never add synthetic data to the test set).\n",
+    "\n",
+    "#### 2. **Global Metrics Actually Got Worse**\n",
+    "- Compared to my baseline, the overall RMSE and R² on the test set got worse after oversampling.\n",
+    "- This suggests that synthetic points, although boosting the rare-event counts, may have introduced noise or “unrealistic” patterns, hurting generalization.\n",
+    "\n",
+    "#### 3. **Performance on Rare Bins**\n",
+    "- When focusing only on the rarest magnitude bins, the oversampled model **did not show a clear improvement**:\n",
+    "    - Errors for the rare bins stayed similar or sometimes increased.\n",
+    "    - In some cases, the model still underestimated or overestimated these events, showing that simply adding synthetic data wasn’t enough to “teach” the model how to handle true outliers.\n",
+    "\n",
+    "#### 4. **Visuals: Residual & Calibration Plots**\n",
+    "- The residuals for the rare bins remained biased, and calibration plots still showed that the model regressed extreme predictions toward the mean.\n",
+    "- Q-Q plots and residual histograms indicated that the oversampled model’s errors were less well-behaved and slightly more spread out.\n",
+    "\n",
+    "#### 5. **No Significant Overfitting (But No Rare-Case Win Either)**\n",
+    "- Learning curves didn’t show dramatic overfitting, but the extra complexity from synthetic data didn’t translate to better performance where it mattered.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **What I Learned & Future Ideas**\n",
+    "\n",
+    "- **Synthetic oversampling can increase attention on rare events in theory, but in practice it can introduce noise and doesn’t guarantee improvement on truly difficult cases.**\n",
+    "- The only way to know if balancing “worked” is to directly check performance on the rarest test cases—not just look at global RMSE or accuracy.\n",
+    "- For my dataset, more sophisticated approaches (e.g., cost-sensitive loss, quantile regression, or a specialized outlier detection step) may be needed to boost rare-event prediction.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Summary Table: Comparison**\n",
+    "\n",
+    "|                | Baseline Model           | Oversampled Model (IBLR GN) |\n",
+    "|----------------|-------------------------|-----------------------------|\n",
+    "| **Test RMSE**  | Lower                   | Higher                      |\n",
+    "| **Test R²**    | Higher                  | Lower                       |\n",
+    "| **Rare Bin RMSE** | High                  | Still High (no clear gain)  |\n",
+    "| **Residuals**  | Tight, slightly biased  | Wider, still biased         |\n",
+    "| **Calibration**| Some shrinkage at tails | Same shrinkage at tails     |\n",
+    "| **Generalization** | Good                 | Slightly worse              |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Conclusion:**  \n",
+    "Even though the idea of balancing the dataset with oversampling is appealing, it didn’t actually help my model with the rare, high-magnitude earthquake cases—the hardest and most important to predict. This experiment shows the importance of thorough, slice-based evaluation, not just global metrics, when dealing with imbalanced regression!\n",
+    "\n",
+    "if your interested in the code i used to train its here\n",
+    "<details>\n",
+    "  <summary>Click to expand full model training code</summary>\n",
+    "\n",
+    "```python\n",
+    "# === REGRESSION MODEL TRAINING & EVALUATION (Enhanced & Streamlit-Ready) ===\n",
+    "import time\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV, cross_val_score\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.ensemble import RandomForestRegressor, HistGradientBoostingRegressor, GradientBoostingRegressor\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.linear_model import Ridge, Lasso\n",
+    "from sklearn.svm import LinearSVR\n",
+    "from sklearn.metrics import mean_absolute_error, r2_score, root_mean_squared_error, mean_absolute_percentage_error, median_absolute_error, explained_variance_score, max_error\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# --- Stratified Train-Test Split by Magnitude Bin ---\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Ensure 'target_bin' is in df_feat before splitting\n",
+    "X = df_feat.drop(columns=[target_col, 'target_bin'])\n",
+    "y = df_feat[target_col]\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y,\n",
+    "    test_size=0.2,\n",
+    "    random_state=42,\n",
+    "    stratify=df_feat['target_bin']\n",
+    ")\n",
+    "\n",
+    "print(f\"X_train shape: {X_train.shape}\")\n",
+    "print(f\"X_test shape: {X_test.shape}\")\n",
+    "print(f\"y_train shape: {y_train.shape}\")\n",
+    "print(f\"y_test shape: {y_test.shape}\")\n",
+    "\n",
+    "# Optional: Verify the distribution in train and test sets\n",
+    "print(\"\\nDistribution of target bins in training set:\")\n",
+    "print(pd.cut(y_train, bins=bins, labels=bin_labels, include_lowest=True).value_counts(normalize=True).sort_index())\n",
+    "print(\"\\nDistribution of target bins in testing set:\")\n",
+    "print(pd.cut(y_test, bins=bins, labels=bin_labels, include_lowest=True).value_counts(normalize=True).sort_index())\n",
+    "\n",
+    "# --- 1. Feature Selection & Train/Test Split ---\n",
+    "target_col = 'mag'\n",
+    "X = df_feat.drop(columns=[target_col])\n",
+    "y = df_feat[target_col]\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42\n",
+    ")\n",
+    "# Data leakage check: Warn if any feature correlates >0.95 with target\n",
+    "corrs = X.select_dtypes(include=[np.number]).corrwith(y).abs()\n",
+    "leaky_features = corrs[corrs > 0.95].index.tolist()\n",
+    "if leaky_features:\n",
+    "    print(\"⚠ WARNING: Possible data leakage! Highly correlated features:\", leaky_features)\n",
+    "\n",
+    "# --- Oversample training set only (with IBLR, robust workflow) ---\n",
+    "import ImbalancedLearningRegression as iblr\n",
+    "# Combine features and target with pd.concat (robust)\n",
+    "df_train_for_iblr = pd.concat([\n",
+    "    X_train.reset_index(drop=True),\n",
+    "    y_train.reset_index(drop=True).rename(target_col)\n",
+    "], axis=1)\n",
+    "print('Before encoding:', df_train_for_iblr.columns)\n",
+    "# Encode all categorical columns\n",
+    "for col in df_train_for_iblr.columns:\n",
+    "    if df_train_for_iblr[col].dtype == 'object' or str(df_train_for_iblr[col].dtype).startswith('category'):\n",
+    "        df_train_for_iblr[col] = df_train_for_iblr[col].astype('category').cat.codes\n",
+    "print('After encoding:', df_train_for_iblr.columns)\n",
+    "# Move target to end\n",
+    "cols = [c for c in df_train_for_iblr.columns if c != target_col] + [target_col]\n",
+    "df_train_for_iblr = df_train_for_iblr[cols]\n",
+    "print('Before IBLR:', df_train_for_iblr.columns)\n",
+    "# Run IBLR (try by name, then index)\n",
+    "try:\n",
+    "    df_train_gn = iblr.gn(data=df_train_for_iblr, y=target_col)\n",
+    "except Exception as e:\n",
+    "    print('Error by name, trying by column index:', e)\n",
+    "    col_idx = df_train_for_iblr.columns.get_loc(target_col)\n",
+    "    df_train_gn = iblr.gn(data=df_train_for_iblr, y=col_idx)\n",
+    "X_train, y_train = df_train_gn.drop(columns=[target_col]), df_train_gn[target_col]\n",
+    "\n",
+    "# --- 2. Feature Preprocessing Pipeline ---\n",
+    "numeric_features = X.select_dtypes(include=['int64', 'float64']).columns.tolist()\n",
+    "categorical_features = X.select_dtypes(include=['object', 'category']).columns.tolist()\n",
+    "for col in [target_col, 'mag_category', 'is_extreme']:\n",
+    "    if col in numeric_features:\n",
+    "        numeric_features.remove(col)\n",
+    "    if col in categorical_features:\n",
+    "        categorical_features.remove(col)\n",
+    "preprocessor = ColumnTransformer([\n",
+    "    ('num', StandardScaler(), numeric_features),\n",
+    "    ('cat', OneHotEncoder(handle_unknown='ignore', sparse_output=False), categorical_features)\n",
+    "])\n",
+    "\n",
+    "# --- 3. Diverse Model Selection & Hyperparameter Grids ---\n",
+    "model_defs = {\n",
+    "    'RandomForest': (\n",
+    "        RandomForestRegressor(random_state=42, n_jobs=-1),\n",
+    "        {\n",
+    "            'reg__n_estimators': [50, 100, 200],\n",
+    "            'reg__max_depth': [10, 20, 30, None]\n",
+    "        }\n",
+    "    ),\n",
+    "    'HistGradientBoosting': (\n",
+    "        HistGradientBoostingRegressor(random_state=42, early_stopping=True),\n",
+    "        {\n",
+    "            'reg__max_iter': [100, 200, 300],\n",
+    "            'reg__learning_rate': [0.01, 0.05, 0.1, 0.2]\n",
+    "        }\n",
+    "    ),\n",
+    "    'Ridge': (\n",
+    "        Ridge(random_state=42),\n",
+    "        {\n",
+    "            'reg__alpha': [0.01, 0.1, 1.0, 10.0, 100.0]\n",
+    "        }\n",
+    "    ),\n",
+    "    'LinearSVR': (\n",
+    "        LinearSVR(random_state=42, max_iter=10000),\n",
+    "        {\n",
+    "            'reg__C': [0.01, 0.1, 1.0, 10.0, 100.0]\n",
+    "        }\n",
+    "    ),\n",
+    "    'Lasso': (\n",
+    "        Lasso(random_state=42, max_iter=10000),\n",
+    "        {\n",
+    "            'reg__alpha': [0.001, 0.01, 0.1, 1.0, 10.0]\n",
+    "        }\n",
+    "    ),\n",
+    "}\n",
+    "\n",
+    "\n",
+    "models = {}\n",
+    "cv_scores = {}\n",
+    "total_start = time.time()\n",
+    "for name, (reg, params) in model_defs.items():\n",
+    "    pipe = Pipeline([\n",
+    "        ('pre', preprocessor),\n",
+    "        ('reg', reg)\n",
+    "    ])\n",
+    "    print(f\"\\n🔍 Tuning {name} (GridSearchCV, 3-fold CV)...\")\n",
+    "    grid = GridSearchCV(pipe, params, cv=3, scoring='neg_root_mean_squared_error', n_jobs=-1, verbose=1)\n",
+    "    grid.fit(X_train, y_train)\n",
+    "    models[name] = grid\n",
+    "    print(f\"✅ {name}: Best CV RMSE = {-grid.best_score_:.4f}, Best Params: {grid.best_params_}\")\n",
+    "\n",
+    "    # Cross-validated RMSE on all train data (robustness check)\n",
+    "    cv_score = cross_val_score(grid.best_estimator_, X_train, y_train, cv=3, scoring='neg_root_mean_squared_error')\n",
+    "    cv_scores[name] = -cv_score.mean()\n",
+    "    print(f\"   Cross-validated RMSE on training folds: {(-cv_score).mean():.4f}\")\n",
+    "\n",
+    "print(f\"\\n🎉 All models trained/tuned in {(time.time() - total_start)/60:.1f} minutes.\\n\")\n",
+    "\n",
+    "# --- 4. Test Set Evaluation & Model Comparison ---\n",
+    "results = []\n",
+    "for name, grid in models.items():\n",
+    "    y_pred = grid.predict(X_test)\n",
+    "    results.append({\n",
+    "        'Model': name,\n",
+    "        'RMSE': root_mean_squared_error(y_test, y_pred),\n",
+    "        'MAE': mean_absolute_error(y_test, y_pred),\n",
+    "        'MAPE': mean_absolute_percentage_error(y_test, y_pred),\n",
+    "        'MedianAE': median_absolute_error(y_test, y_pred),\n",
+    "        'MaxError': max_error(y_test, y_pred),\n",
+    "        'ExplainedVar': explained_variance_score(y_test, y_pred),\n",
+    "        'R2': r2_score(y_test, y_pred)\n",
+    "    })\n",
+    "results_df = pd.DataFrame(results).set_index('Model').sort_values('RMSE')\n",
+    "print(\"📊 Test Set Results (Lower RMSE/MAE/MAPE/MedianAE/MaxError = better, Higher R2/ExplainedVar = better):\\n\", results_df)\n",
+    "\n",
+    "# --- 5. Automated Feature Importance (Tree Models) ---\n",
+    "for name in ['RandomForest', 'HistGradientBoosting', 'DecisionTree', 'GradientBoosting', 'XGBoost']:\n",
+    "    if name in models:\n",
+    "        best_est = models[name].best_estimator_\n",
+    "        if hasattr(best_est.named_steps['reg'], 'feature_importances_'):\n",
+    "            importances = best_est.named_steps['reg'].feature_importances_\n",
+    "            feature_names = best_est.named_steps['pre'].get_feature_names_out()\n",
+    "            imp_df = pd.DataFrame({'feature': feature_names, 'importance': importances})\n",
+    "            print(f\"\\n{name} Top 10 Features:\")\n",
+    "            print(imp_df.sort_values('importance', ascending=False).head(10))\n",
+    "\n",
+    "# --- 6. Model Blending: Average Top 2 Tree Models (if both exist) ---\n",
+    "tree_models = [m for m in ['RandomForest', 'HistGradientBoosting', 'DecisionTree', 'GradientBoosting', 'XGBoost'] if m in models]\n",
+    "if len(tree_models) >= 2:\n",
+    "    blend_pred = sum([models[m].predict(X_test) for m in tree_models[:2]]) / 2\n",
+    "    blend_rmse = root_mean_squared_error(y_test, blend_pred)\n",
+    "    print(f\"\\nBlended Model RMSE (first 2 tree models): {blend_rmse:.4f}\")\n",
+    "\n",
+    "# --- 7. Residual Analysis for Best Model ---\n",
+    "best_model_name = results_df['RMSE'].idxmin()\n",
+    "best_model = models[best_model_name].best_estimator_\n",
+    "y_pred = best_model.predict(X_test)\n",
+    "residuals = y_test - y_pred\n",
+    "\n",
+    "plt.figure(figsize=(7,4))\n",
+    "plt.hist(residuals, bins=50, edgecolor='k', alpha=0.7)\n",
+    "plt.title(f\"Residuals of Best Model ({best_model_name})\")\n",
+    "plt.xlabel(\"Residual (Actual - Predicted)\")\n",
+    "plt.ylabel(\"Frequency\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# --- 8. Hyperparameter Reporting: Top 3 configs for each model ---\n",
+    "for name, grid in models.items():\n",
+    "    print(f\"\\nTop 3 configs for {name}:\")\n",
+    "    res_df = pd.DataFrame(grid.cv_results_)\n",
+    "    print(res_df.sort_values('rank_test_score').head(3)[['params', 'mean_test_score']])\n",
+    "\n",
+    "# --- 9. Save Best Model for Deployment ---\n",
+    "import joblib\n",
+    "joblib.dump(best_model, 'best_model.joblib')\n",
+    "print(f\"✅ Saved best model ({best_model_name}) as best_model.joblib\")\n",
+    "</details>```\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "8fe65d81",
